# Evaluateur-Typeur-de-Lambda-Calcul

./: README.md  dune-project  eval.ml  lamda.ml  main.ml  types.ml  unify.ml
src/: dune  eval.ml  lambda.ml  lexer.mll  main_test_eval.ml  main_test_types.ml  parser.mly  syntax.ml  test_eval.ml  test_eval_part2.ml  test_parser.ml  test_types.ml  types.ml  unify.ml
