(ocamllex lexer)

(menhir
 (modules parser))

; Exécutable pour `test_parser`
(executable
 (name test_parser)
 (modules lambda syntax types lexer parser test_parser)
 (libraries unix str))

; Exécutable pour `test_eval`
(executable
 (name test_eval)
 (modules lambda syntax eval types test_eval)
 (libraries unix))

; Exécutable pour `test_types`
(executable
 (name test_types)
 (modules lambda syntax eval types test_types)
 (libraries unix))
